--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>The Golem, The Hound, The Seer: Main Page</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
   <div class="max-container">
@@ -30,7 +30,7 @@
 </header>
   <!-- Image --> 
   <div class="image-container" contenteditable>
-    <img src="images/main_cover.jpg" alt="Main Page Image">
+    <img src="assets/images/main_cover.jpg" alt="Main Page Image">
   </div>
   </div>
   <!-- SVG --> 
