Added new directories for updating website

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <span>The Golem</span>
       <span>The Hound</span>
       <span>The Seer</span>
+      <span class="subtitle-span">A musical endeavor examining AI's effects through collective creativity</span>
       <span class="special-span">Dutch Design Week 2023</span>
     </h1>
   </div>
