--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact/index.html">Contact</a></li>
       </ul>
     </div>
   </nav>
