--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
   <nav id="navbar">
     <div class="container">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">News</a></li>
         <li><a href="*contact\index.html">Contact</a></li>
