--- a/contact/contact.html
+++ b/contact/contact.html
@@ -10,10 +10,10 @@
   <nav id="navbar">
     <div class="container">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="*contact\index.html">Contact</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../about/about.html">About</a></li>
+        <li><a href="../news/news.html">News</a></li>
+        <li><a href="*contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -21,7 +21,7 @@
   <header id="main-header">
   <div class="container">
     <h1>
-      <span>Contact Us</span>
+      <span>Contact</span>
       <span class="subtitle-span">golem.hound.seer@gmail.com</span>
       <span class="special-span">Reach Out</span>
     </h1>
