--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <nav id="navbar">
     <div class="container">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="/about/about.html">About</a></li>
+        <li><a href="/news/news.html">News</a></li>
+        <li><a href="/contact/contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
