--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="container">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="/about/about.html">About</a></li>
-        <li><a href="/news/news.html">News</a></li>
-        <li><a href="/contact/contact.html">Contact</a></li>
+        <li><a href="about/about.html">About</a></li>
+        <li><a href="news/news.html">News</a></li>
+        <li><a href="contact/contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
