Added about section with team info

--- a/about/about.html
+++ b/about/about.html
@@ -22,42 +22,51 @@
   <div class="container">
     <h1>
       <span>About</span>
-      <span class="subtitle-span">Who are we?</span>
-      <span class="special-span">Our Team</span>
+      <!-- <span class="subtitle-span">The Project</span> -->
+      <span class="special-span">Project ~ Our Team</span>
     </h1>
+  </br>
+    <!-- DIV Text about project --> 
+    <div class="about-container" contenteditable>
+      <p>
+        'The Golem, The Hound, The Seer' asks the urgent question 'What could Human-AI coexistence look like?'. 
+        It takes the form of a musical performance/play/experience that aims to go beyond the myths of the 'AI as evil subjugator' as well as 'AI as technological saviour of humanity' 
+        and explores new ones. The project is a space for the audience to reflect on these apocalyptical/utopic models and offers alternative perspectives.
+      </p>
+    </br>
+      <p>
+        Ancient myths sought to explain natural phenomena that were beyond human comprehension. 
+        Similarly to mythological characters, artificial intelligence (AI) involves concepts that are difficult for humans to understand or explain, and both often invoke fear or awe in those who encounter them. 
+        In many ways, AI is like a modern-day mythological creature: its powers are often exaggerated, it is surrounded by speculation and conjecture, and sometimes it is worshipped as a god. 
+        Furthermore, the myths surrounding AI often focus on its potential for evil or destruction, in the same way monsters and otherworldly creatures of folklore threaten the well-being of humans, are driven by mysterious motivations, and have the power to change the world. 
+        But just as the gods can be life-giving and compassionate, so too can AI.
+      </p>
+    </div>
+  
+    <!-- DIV text about the team -->
+    <div class="team-container" contenteditable>
+      </br>
+      <p>Our (Human) Team:</p>
+      <div class="team-member">
+        <img src="C:\Users\seans\Documents\Work\Golem Hound Seer Project\golem-hound-seer.github.io\golem-hound-seer.github.io\about\assets\images\luca_bw.jpg" alt="Lucandrea">
+        <p>Lucandrea: Art direction, spatial design</p>
+      </div>
+      <div class="team-member">
+        <img src="path-to-image2.jpg" alt="Camiel">
+        <p>Camiel: Composition, music performance</p>
+      </div>
+      <div class="team-member">
+        <img src="C:\Users\seans\Documents\Work\Golem Hound Seer Project\golem-hound-seer.github.io\golem-hound-seer.github.io\about\assets\images\phil_bw.jpg" alt="Philip">
+        <p>Philip: Consulting and software development</p>
+      </div>
+      <div class="team-member">
+        <img src="C:\Users\seans\Documents\Work\Golem Hound Seer Project\golem-hound-seer.github.io\golem-hound-seer.github.io\about\assets\images\sean_bw.jpg" alt="Sean">
+        <p>Sean: Software Development</p>
+      </div>
+    </div>
   </div>
 </header>
-  <!-- Image --> 
-  <div class="image-container" contenteditable>
-    <img src="../assets/images/main_cover.jpg" alt="Main Page Image">
   </div>
-  </div>
-  <!-- SVG --> 
-  <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-  <defs>
-    <filter id="squiggly-0">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="0"/>
-      <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="6" />
-    </filter>
-    <filter id="squiggly-1">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="1"/>
-    <feDisplacementMap in="SourceGraphic" in2="noise" scale="8" />
-    </filter>
-    
-    <filter id="squiggly-2">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="2"/>
-    <feDisplacementMap in="SourceGraphic" in2="noise" scale="6" />
-    </filter>
-    <filter id="squiggly-3">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3"/>
-<feDisplacementMap in="SourceGraphic" in2="noise" scale="8" />
-   </filter>
-    
-    <filter id="squiggly-4">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4"/>
-<feDisplacementMap in="SourceGraphic" in2="noise" scale="6" />
-    </filter>
-  </defs> 
-</svg>
+  
 </body>
 </html>
