update image paths

--- a/about/about.html
+++ b/about/about.html
@@ -48,7 +48,7 @@
       </br>
       <p>Our (Human) Team:</p>
       <div class="team-member">
-        <img src="C:\Users\seans\Documents\Work\Golem Hound Seer Project\golem-hound-seer.github.io\golem-hound-seer.github.io\about\assets\images\luca_bw.jpg" alt="Lucandrea">
+        <img src="../assets/images/luca_bw.jpg" alt="Lucandrea">
         <p>Lucandrea: Art direction, spatial design</p>
       </div>
       <div class="team-member">
