Added camiel_bw photo

--- a/about/about.html
+++ b/about/about.html
@@ -52,15 +52,15 @@
         <p>Lucandrea: Art direction, spatial design</p>
       </div>
       <div class="team-member">
-        <img src="path-to-image2.jpg" alt="Camiel">
+        <img src="../assets/images/camiel_bw.jpg" alt="Camiel">
         <p>Camiel: Composition, music performance</p>
       </div>
       <div class="team-member">
-        <img src="C:\Users\seans\Documents\Work\Golem Hound Seer Project\golem-hound-seer.github.io\golem-hound-seer.github.io\about\assets\images\phil_bw.jpg" alt="Philip">
+        <img src="../assets/images/phil_bw.jpg" alt="Philip">
         <p>Philip: Consulting and software development</p>
       </div>
       <div class="team-member">
-        <img src="C:\Users\seans\Documents\Work\Golem Hound Seer Project\golem-hound-seer.github.io\golem-hound-seer.github.io\about\assets\images\sean_bw.jpg" alt="Sean">
+        <img src="../assets/images/sean_bw.jpg" alt="Sean">
         <p>Sean: Software Development</p>
       </div>
     </div>
