updated image type

--- a/about/about.html
+++ b/about/about.html
@@ -52,7 +52,7 @@
         <p>Lucandrea: Art direction, spatial design</p>
       </div>
       <div class="team-member">
-        <img src="../assets/images/camiel_bw.jpg" alt="Camiel">
+        <img src="../assets/images/camiel_bw.png" alt="Camiel">
         <p>Camiel: Composition, music performance</p>
       </div>
       <div class="team-member">
