added gif image, title image, background color

--- a/index.html
+++ b/index.html
@@ -21,45 +21,19 @@
   <header id="main-header">
   <div class="container">
     <h1>
-      <span>The Golem</span>
-      <span>The Hound</span>
-      <span>The Seer</span>
-      <span class="subtitle-span">A musical endeavor examining AI's effects through collective creativity</span>
-      <span class="special-span">Dutch Design Week 2023</span>
+      <!-- title image-->
+      <div class="image-container" contenteditable>
+        <img src="assets/images/just-text.png" alt="Main Page Image">
+      </div>
+      <!-- <span class="subtitle-span">A musical endeavor examining AI's effects through collective creativity</span>  -->
+      <!-- <span class="special-span">Dutch Design Week 2023</span> -->
     </h1>
   </div>
 </header>
-  <!-- Image --> 
+<!-- Image --> 
   <div class="image-container" contenteditable>
-    <img src="assets/images/main_cover.jpg" alt="Main Page Image">
+    <img src="assets/images/The_golem_the_houd_the_seer_2.gif" alt="Main Page Image">
   </div>
   </div>
-  <!-- SVG --> 
-  <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-  <defs>
-    <filter id="squiggly-0">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="0"/>
-      <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="6" />
-    </filter>
-    <filter id="squiggly-1">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="1"/>
-    <feDisplacementMap in="SourceGraphic" in2="noise" scale="8" />
-    </filter>
-    
-    <filter id="squiggly-2">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="2"/>
-    <feDisplacementMap in="SourceGraphic" in2="noise" scale="6" />
-    </filter>
-    <filter id="squiggly-3">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3"/>
-<feDisplacementMap in="SourceGraphic" in2="noise" scale="8" />
-   </filter>
-    
-    <filter id="squiggly-4">
-      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4"/>
-<feDisplacementMap in="SourceGraphic" in2="noise" scale="6" />
-    </filter>
-  </defs> 
-</svg>
 </body>
 </html>
