edited contact.html file

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -22,7 +22,7 @@
   <div class="container">
     <h1>
       <span>Contact</span>
-      <span class="subtitle-span">golem.hound.seer@gmail.com</span>
+      <span class="subtitle-span"><a href="mailto:golem.hound.seer@gmail.com" style="color: white;">golem.hound.seer@gmail.com</a></span>
       <span class="special-span">Reach Out</span>
     </h1>
   </div>
